new: Colour Scheme added to SNIPPETS
Added font - using single font on page sourced from Google Fonts

--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
 Variables
 ==============*/
 :root {
-    /*color scheme*/
-  
-    /*font and text*/
-  }
+  /*color scheme*/
+
+  /*font and text*/
+  --font: "Ubuntu Mono", monospace;
+  --header-font: bold 3em/1.5 "Ubuntu Mono", monospace;
+}
   
   
   /*======================================
