--- a/style.css
+++ b/style.css
@@ -3,143 +3,172 @@ Variables
 ==============*/
 :root {
   /*color scheme*/
-
+  --section1-border-col: hsl(239, 94%, 19%);
+  --section1-inner-col: hsla(239, 94%, 19%, 0.5);
   /*font and text*/
   --font: "Ubuntu Mono", monospace;
-  --header-font: bold 3em/1.5 "Ubuntu Mono", monospace;
+  --header-font: bold 3rem/1.5 "Ubuntu Mono", monospace;
 }
-  
-  
-  /*======================================
+
+/*======================================
   Back to Basics - reset browser defaults
   =======================================*/
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-  }
-  
-  /*===============================
+html,
+body {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  background-color: var(--body-back-col);
+  color: var(--body-col);
+}
+
+/*===============================
   Global styles and reset defaults
   ================================*/
-  
-  body * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /*reset default font - never shall Time New Roman be seen again!*/
-  h1,
-  h3,
-  h5,
-  p,
-  li {
-    font-family: Verdana, sans-serif;
-  }
-  
-  /*================
+
+body * {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*reset default font - never shall Time New Roman be seen again!*/
+h1,
+h2,
+h3,
+p,
+li {
+  font-family: Verdana, sans-serif;
+}
+
+/*================
   Page Layout 
   =================*/
-  
-  /*=====
+
+/*=====
   Header 
   =======*/
-  
-  /*=======
+header {
+  background-color: hsla(239, 94%, 19%, 0.6);
+  background-image: linear-gradient(
+    to bottom,
+    hsl(239, 94%, 19%),
+    hsl(201, 100%, 36%),
+    hsl(190, 100%, 42%),
+    hsl(189, 75%, 75%),
+    hsl(190, 77%, 88%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+header h1 {
+  font: var(--header-font);
+  text-align: center;
+}
+/*=======
   Nav Menu
   =========*/
-  
-  /*==========================
+nav {
+  background-color: hsl(201, 100%, 36%);
+  padding: 1rem;
+}
+
+nav ul {
+  background-color: white;
+}
+
+nav ul li {
+  background-color: hsla(201, 100%, 36%, 0.6);
+}
+/*==========================
   Main and Section containers
   ===========================*/
-  
-  /*====
+main {
+  background-color: hsla(239, 94%, 19%, 0.6);
+  /*
+  background-image: linear-gradient(
+    to bottom,
+    hsl(239, 94%, 19%),
+    hsl(201, 100%, 36%),
+    hsl(190, 100%, 42%),
+    hsl(189, 75%, 75%),
+    hsl(190, 77%, 88%)
+  );*/
+}
+
+/*====
   Footer
   =======*/
-  
-  /*================
+
+/*================
   The little touches
   =================*/
-  
-  /*Back to top - only for small mobile screen views*/
-  .backtotop {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    font-size: 2rem;
-    padding: 0.4rem;
-  }
-  
-  /*
-  .backtotop a {
-    color: var(--light-colour, #9a8c98);
-    text-shadow: 1px 1px 2px black;
-  }
-  */
-  
-  /*================
+
+/*Back to top - only for small mobile screen views*/
+
+/*================
   Responsivesnness
   ==================*/
-  /*
+/*
   @media only screen and (min-width: 1024px) {
   }
   */
-  
-  /*=============
+
+/*=============
   Accessibility
   ===============*/
-  
-  @media (prefers-color-scheme: dark) {
-   
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --body-back-col: #0f0f0f;
+    --body-col: #f5f5f5;
   }
-  
-  @media (prefers-color-scheme: light) {
-  
+}
+
+@media (prefers-color-scheme: light) {
+  --body-back-col: #f5f5f5;
+  --body-col: #0f0f0f;
+}
+
+/*Reset to user browser preference*/
+
+@media (prefers-reduced-motion: reduce) {
+  body {
+    scroll-behavior: auto;
   }
-  
-  
-  /*Reset to user browser preference*/
-  
-  @media (prefers-reduced-motion: reduce) {
-    body {
-      scroll-behavior: auto;
-    }
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    /* animation styles go here */
-  }
-  
-  /*======================
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  /* animation styles go here */
+}
+
+/*======================
   Ye Olde Time Print View
   ========================*/
-  @media print {
-  
+@media print {
   /*remove unneeded elements*/
-  
+
   /*display footer links*/
-  
-    footer a:link {
-      color: #000;
-      margin: 0;
-      display: block;
-      font-size: 10pt;
-    }
-  
-    footer a::after {
-      content: " [" attr(href) "]";
-    }
-  
-    footer a:link,
-    footer a:visited {
-      color: #000;
-      background: none;
-      padding: 0;
-    }
+
+  footer a:link {
+    color: #000;
+    margin: 0;
+    display: block;
+    font-size: 10pt;
   }
-  
-  
+
+  footer a::after {
+    content: " [" attr(href) "]";
+  }
+
+  footer a:link,
+  footer a:visited {
+    color: #000;
+    background: none;
+    padding: 0;
+  }
+}
