--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Variables
 
   /*font and text*/
   --font: "Ubuntu Mono", monospace;
-  --header-font: bold 3rem/1.5 "Ubuntu Mono", monospace;
+  --header-font: bold 3.5rem/1.5 "Ubuntu Mono", monospace;
 }
 
 /*======================================
@@ -56,8 +56,7 @@ li {
   =======*/
 
 /*text shows gradient color for header and footer*/
-header,
-footer {
+header, footer {
   background-color: var(--header-border-col, #03045e);
   background-image: linear-gradient(
     to bottom,
@@ -82,6 +81,32 @@ header h1 {
 =========*/
 nav {
   border-top: 0.3rem solid white;
+}
+
+nav ul {
+  margin: 1rem;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+nav ul li {
+  padding 1rem;
+  font: 2rem var(--font);
+  border-bottom: 0.2rem solid; 
+  border-top: 0.2rem solid; 
+}
+
+nav ul li a {
+  width: 100%;
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5rem;
+}
+
+nav ul li:hover a{
+  color: var(--nav-border-col);
 }
 /*==========================
   Main and Section containers
