--- a/style.css
+++ b/style.css
@@ -164,10 +164,54 @@ section .subsection {
   margin: 1rem;
 }
 
-section .subsection h3 {
-  text-decoration: underline;
-  text-underline-offset: 4px;
+.subsection div {
+  margin: 0 1rem;
+}
+
+.subsection h3 {
   margin-bottom: 0.5rem;
+  border-bottom: solid 0.2rem;
+  border-image: linear-gradient(
+      to right,
+      hsl(239, 94%, 19%),
+      hsl(201, 100%, 36%),
+      hsl(190, 100%, 42%),
+      hsl(189, 75%, 75%),
+      hsl(190, 77%, 88%)
+    )
+    20;
+}
+
+.subsection p {
+  line-height: 200%;
+}
+.subsection .code_box {
+  display: inline-block;
+  margin: 1rem 0;
+  padding: 1rem;
+  background-color: var(--nav-border-col);
+}
+
+.code_box p {
+  font-style: italic;
+}
+.code_box code {
+  line-height: 1.5;
+}
+
+/*===================
+  List Style Examples
+=====================*/
+
+#list_sec .subsection ul,
+#list_sec .subsection ol {
+  margin-left: 1rem;
+  padding: 0.5rem;
+}
+
+#list_sec .subsection ul li,
+#list_sec .subsection ol li {
+  padding: 0.3rem 0.5rem;
 }
 /*====
   Footer
