--- a/style.css
+++ b/style.css
@@ -319,28 +319,32 @@ section .subsection {
 
 /*LIST IMAGE EXAMPLES*/
 
+#list_image_examples ul {
+  list-style-type: none;
+}
+
 #list_image_examples ul li {
-  padding-left: 2rem;
-  background-image: url(https://raw.githubusercontent.com/MazontheMoon/css_cheatsheet_lists_links/master/img/star.svg);
+  padding-left: 3rem;
+  background-image: url(https://github.com/MazontheMoon/css_cheatsheet_lists_links/blob/main/star.svg?raw=true);
   background-position: 0 0;
   background-size: 1.6rem 1.6rem;
   background-repeat: no-repeat;
 }
 
 #list_image_examples ul li:nth-child(1) {
-  background-image: url(https://raw.githubusercontent.com/MazontheMoon/css_cheatsheet_lists_links/master/img/jedi-order-brands.svg);
+  background-image: url(https://github.com/MazontheMoon/css_cheatsheet_lists_links/blob/main/jedi-order-brands.svg?raw=true);
 }
 
 #list_image_examples ul li:nth-child(2) {
-  background-image: url(https://raw.githubusercontent.com/MazontheMoon/css_cheatsheet_lists_links/master/img/old-republic-brands.svg);
+  background-image: url(https://github.com/MazontheMoon/css_cheatsheet_lists_links/blob/main/old-republic-brands.svg?raw=true);
 }
 
 #list_image_examples ul li:nth-child(3) {
-  background-image: url(https://raw.githubusercontent.com/MazontheMoon/css_cheatsheet_lists_links/master/img/galactic-republic-brands.svg);
+  background-image: url(https://github.com/MazontheMoon/css_cheatsheet_lists_links/blob/main/galactic-republic-brands.svg?raw=true);
 }
 
 #list_image_examples ul li:nth-child(4) {
-  background-image: url(https://raw.githubusercontent.com/MazontheMoon/css_cheatsheet_lists_links/master/img/galactic-senate-brands.svg);
+  background-image: url(https://github.com/MazontheMoon/css_cheatsheet_lists_links/blob/main/galactic-senate-brands.svg?raw=true);
 }
 /*LINK STYLING*/
 
