--- a/style.css
+++ b/style.css
@@ -358,7 +358,6 @@ section .subsection {
 
 /*LIST IMAGE EXAMPLES*/
 
-
 #list_image_examples ul li {
   font-size: 150%;
   list-style-image: linear-gradient(
@@ -538,7 +537,40 @@ footer #made_by_me {
   Ye Olde Time Print View
   ========================*/
 @media print {
+  body * {
+    background-color: none;
+    color: #000;
+    box-shadow: none;
+  }
+
+  /*font size - change px to pt*/
+  h1 {
+    font-size: 18pt;
+    text-shadow: none;
+  }
+
+  h2 {
+    font-size: 16pt;
+    text-shadow: none;
+  }
+
+  h3 {
+    font-size: 14pt;
+    text-shadow: none;
+  }
+
+  p,
+  li,
+  code,
+  abbr {
+    font-size: 12pt;
+  }
+
   /*remove unneeded elements*/
+  nav,
+  backtotop {
+    display: none;
+  }
 
   /*display footer links*/
 
